--- a/src/app/pages/projects/overview/overview.component.html
+++ b/src/app/pages/projects/overview/overview.component.html
@@ -145,7 +145,7 @@
                   <th>Type</th>
                   <th>Date</th>
                   <th>Status</th>
-                  <th>Edit</th>
+                  <th>Action</th>
                 </tr>
               </thead>
               <tbody>
