--- a/src/app/pages/projects/projectlist/projectlist.component.html
+++ b/src/app/pages/projects/projectlist/projectlist.component.html
@@ -63,7 +63,7 @@
                     </a>
                     <div class="dropdown-menu  dropdown-menu-right" ngbDropdownMenu>
                       <a class="dropdown-item" href="javascript: void(0);"  routerLink='/projects/edit/{{project.project_id}}'>Edit</a>
-                      <a class="dropdown-item" href="javascript: void(0);" routerLink='/tasks/list'>Tasks</a>
+                      <!-- <a class="dropdown-item" href="javascript: void(0);" routerLink='/tasks/list'>Tasks</a> -->
                     </div>
                   </div>
                 </td>
