--- a/src/app/pages/tasks/overview/overview.component.html
+++ b/src/app/pages/tasks/overview/overview.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <app-page-title title="{{title}}" [breadcrumbItems]="breadCrumbItems"></app-page-title>
   <div class="row">
-    <div class="col-lg-8">
+    <div class="col-lg-12">
       <div class="card">
         <div class="card-body">
           <div class="media">
@@ -65,7 +65,7 @@
         
       </ul>
     </div>
-    <div class="col-lg-8">
+    <div class="col-lg-8  mt-3 pt-1">
         <app-task-comments [task_id]="id" [comments]="comments"></app-task-comments>
         <!-- <div class="chat-conversation p-3">
             <ul class="list-unstyled">
