--- a/src/app/pages/contacts/usergrid/usergrid.component.html
+++ b/src/app/pages/contacts/usergrid/usergrid.component.html
@@ -98,7 +98,7 @@
   <div class="row">
     <div class="col-12">
       <div class="text-center my-3">
-        <a href="javascript:void(0);" class="text-success"><i class="bx bx-hourglass bx-spin mr-2"></i> Load more </a>
+        <a href="javascript:void(0);" class="text-success"><i class="bx bx-hourglass bx-spin me-2"></i> Load more </a>
       </div>
     </div> <!-- end col-->
   </div>
