--- a/src/app/pages/dashboards/blog/blog.component.html
+++ b/src/app/pages/dashboards/blog/blog.component.html
@@ -7,7 +7,7 @@
                     <div class="card mini-stats-wid">
                         <div class="card-body">
                             <div class="d-flex flex-wrap">
-                                <div class="mr-3">
+                                <div class="me-3">
                                     <p class="text-muted mb-2">Total Post</p>
                                     <h5 class="mb-0">120</h5>
                                 </div>
@@ -42,7 +42,7 @@
                     <div class="card blog-stats-wid">
                         <div class="card-body">
                             <div class="d-flex flex-wrap">
-                                <div class="mr-3">
+                                <div class="me-3">
                                     <p class="text-muted mb-2">Comments</p>
                                     <h5 class="mb-0">4,235</h5>
                                 </div>
@@ -284,7 +284,7 @@
                                                             <img src="assets/images/small/img-6.jpg" alt=""
                                                                 class="avatar-md h-auto d-block rounded">
                                                         </div>
-                                                        <div class="align-self-center overflow-hidden mr-auto">
+                                                        <div class="align-self-center overflow-hidden me-auto">
                                                             <div>
                                                                 <h5 class="font-size-14 text-truncate"><a
                                                                         href="javascript: void(0);"
@@ -303,7 +303,7 @@
                                                                 class="avatar-md h-auto d-block rounded">
                                                         </div>
 
-                                                        <div class="align-self-center overflow-hidden mr-auto">
+                                                        <div class="align-self-center overflow-hidden me-auto">
                                                             <div>
                                                                 <h5 class="font-size-14 text-truncate"><a
                                                                         href="javascript: void(0);"
@@ -323,7 +323,7 @@
                                                                 class="avatar-md h-auto d-block rounded">
                                                         </div>
 
-                                                        <div class="align-self-center overflow-hidden mr-auto">
+                                                        <div class="align-self-center overflow-hidden me-auto">
                                                             <div>
                                                                 <h5 class="font-size-14 text-truncate"><a
                                                                         href="javascript: void(0);"
@@ -352,7 +352,7 @@
                                                                 class="avatar-md h-auto d-block rounded">
                                                         </div>
 
-                                                        <div class="align-self-center overflow-hidden mr-auto">
+                                                        <div class="align-self-center overflow-hidden me-auto">
                                                             <div>
                                                                 <h5 class="font-size-14 text-truncate"><a
                                                                         href="javascript: void(0);"
@@ -371,7 +371,7 @@
                                                                 class="avatar-md h-auto d-block rounded">
                                                         </div>
 
-                                                        <div class="align-self-center overflow-hidden mr-auto">
+                                                        <div class="align-self-center overflow-hidden me-auto">
                                                             <div>
                                                                 <h5 class="font-size-14 text-truncate"><a
                                                                         href="javascript: void(0);"
@@ -390,7 +390,7 @@
                                                                 class="avatar-md h-auto d-block rounded">
                                                         </div>
 
-                                                        <div class="align-self-center overflow-hidden mr-auto">
+                                                        <div class="align-self-center overflow-hidden me-auto">
                                                             <div>
                                                                 <h5 class="font-size-14 text-truncate"><a
                                                                         href="javascript: void(0);"
@@ -408,7 +408,7 @@
                                                                 class="avatar-md h-auto d-block rounded">
                                                         </div>
 
-                                                        <div class="align-self-center overflow-hidden mr-auto">
+                                                        <div class="align-self-center overflow-hidden me-auto">
                                                             <div>
                                                                 <h5 class="font-size-14 text-truncate"><a
                                                                         href="javascript: void(0);"
@@ -437,7 +437,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex flex-wrap">
-                        <div class="mr-2">
+                        <div class="me-2">
                             <h5 class="card-title mb-3">Comments</h5>
                         </div>
                         <div class="dropdown ms-auto" ngbDropdown>
@@ -472,7 +472,7 @@
                                             resulting of the individual</p>
                                         <div>
                                             <a href="javascript: void(0);" class="text-success"><i
-                                                    class="mdi mdi-reply mr-1"></i> Reply</a>
+                                                    class="mdi mdi-reply me-1"></i> Reply</a>
                                         </div>
                                     </div>
                                 </div>
@@ -686,7 +686,7 @@
                                     <i class="bx bx-right-arrow-circle font-size-18"></i>
                                 </div>
                                 <div class="media">
-                                    <div class="mr-3">
+                                    <div class="me-3">
                                         <h5 class="font-size-14">02 Nov <i
                                                 class="bx bx-right-arrow-alt font-size-16 text-primary align-middle ms-2"></i>
                                         </h5>
