--- a/src/app/pages/dashboards/crypto/crypto.component.html
+++ b/src/app/pages/dashboards/crypto/crypto.component.html
@@ -454,7 +454,7 @@
                             </li>
                             <li class="list-group-item">
                                 <div class="media">
-                                    <div class="avatar-xs mr-3">
+                                    <div class="avatar-xs me-3">
                                         <span class="avatar-title rounded-circle bg-light">
                                             <img src="assets/images/companies/img-2.png" alt="" height="18">
                                         </span>
@@ -474,7 +474,7 @@
                             </li>
                             <li class="list-group-item">
                                 <div class="media">
-                                    <div class="avatar-xs mr-3">
+                                    <div class="avatar-xs me-3">
                                         <span class="avatar-title rounded-circle bg-light">
                                             <img src="assets/images/companies/img-3.png" alt="" height="18">
                                         </span>
@@ -494,7 +494,7 @@
                             </li>
                             <li class="list-group-item">
                                 <div class="media">
-                                    <div class="avatar-xs mr-3">
+                                    <div class="avatar-xs me-3">
                                         <span class="avatar-title rounded-circle bg-light">
                                             <img src="assets/images/companies/img-1.png" alt="" height="18">
                                         </span>
