--- a/src/app/pages/dashboards/saas/saas.component.html
+++ b/src/app/pages/dashboards/saas/saas.component.html
@@ -53,7 +53,7 @@
                                 <div class="dropdown float-end" ngbDropdown>
                                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"
                                         aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>
-                                        <i class="bx bxs-cog align-middle mr-1"></i> Setting
+                                        <i class="bx bxs-cog align-middle me-1"></i> Setting
                                     </button>
                                     <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
                                         <a class="dropdown-item" href="javascript: void(0);">Action</a>
@@ -927,7 +927,7 @@
                                                     {{data.message}}
                                                 </p>
                                                 <p class="chat-time mb-0"><i
-                                                        class="bx bx-time-five align-middle mr-1"></i>
+                                                        class="bx bx-time-five align-middle me-1"></i>
                                                     {{data.time}}</p>
                                             </div>
                                         </div>
