--- a/src/app/pages/ecommerce/checkout/checkout.component.html
+++ b/src/app/pages/ecommerce/checkout/checkout.component.html
@@ -78,20 +78,20 @@
 
                         <div>
 
-                          <div class="custom-control custom-radio custom-control-inline mr-4">
+                          <div class="custom-control custom-radio custom-control-inline me-4">
                             <input type="radio" id="customRadioInline1" name="customRadioInline1"
                               class="custom-control-input">
                             <label class="custom-control-label" for="customRadioInline1"><i
                                 class="fab fa-cc-mastercard me-1 font-size-20 align-top"></i> Credit / Debit
                               Card</label>
                           </div>
-                          <div class="custom-control custom-radio custom-control-inline mr-4">
+                          <div class="custom-control custom-radio custom-control-inline me-4">
                             <input type="radio" id="customRadioInline2" name="customRadioInline1"
                               class="custom-control-input">
                             <label class="custom-control-label" for="customRadioInline2"><i
                                 class="fab fa-cc-paypal me-1 font-size-20 align-top"></i> Paypal</label>
                           </div>
-                          <div class="custom-control custom-radio custom-control-inline mr-4">
+                          <div class="custom-control custom-radio custom-control-inline me-4">
                             <input type="radio" id="customRadioInline3" name="customRadioInline1"
                               class="custom-control-input" checked>
                             <label class="custom-control-label" for="customRadioInline3"><i
@@ -180,7 +180,7 @@
                                   <td colspan="3">
                                     <div class="bg-soft-primary p-3 rounded">
                                       <h5 class="font-size-14 text-primary mb-0"><i
-                                          class="fas fa-shipping-fast mr-2"></i>
+                                          class="fas fa-shipping-fast me-2"></i>
                                         Shipping <span class="float-end">Free</span></h5>
                                     </div>
                                   </td>
