--- a/src/app/pages/ecommerce/customers/customers.component.html
+++ b/src/app/pages/ecommerce/customers/customers.component.html
@@ -17,7 +17,7 @@
             </div>
             <div class="col-sm-8">
               <div class="text-sm-end">
-                <button type="button" class="btn btn-success btn-rounded mb-2 mr-2" (click)="openModal(content)">
+                <button type="button" class="btn btn-success btn-rounded mb-2 me-2" (click)="openModal(content)">
                   <i class="mdi mdi-plus me-1"></i> New Customers
                 </button>
               </div>
