--- a/src/app/pages/ecommerce/orders/orders.component.html
+++ b/src/app/pages/ecommerce/orders/orders.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="col-sm-8">
               <div class="text-sm-end">
-                <button type="button" class="btn btn-success btn-rounded mb-2 me-2"><i class="mdi mdi-plus mr-1"></i>
+                <button type="button" class="btn btn-success btn-rounded mb-2 me-2"><i class="mdi mdi-plus me-1"></i>
                   Add New Order</button>
               </div>
             </div><!-- end col-->
