--- a/src/app/pages/ecommerce/products/products.component.html
+++ b/src/app/pages/ecommerce/products/products.component.html
@@ -137,7 +137,7 @@
                   <i class="bx bx-star text-warning"></i>
                   <i class="bx bx-star text-warning"></i>
                 </p>
-                <h5 class="my-0"><span class="text-muted mr-2"><del>$ {{product.oriRate}}</del></span> <b>$
+                <h5 class="my-0"><span class="text-muted me-2"><del>$ {{product.oriRate}}</del></span> <b>$
                   {{product.disRate}}</b></h5>
               </div>
             </div>
