--- a/src/app/pages/projects/user/user.component.html
+++ b/src/app/pages/projects/user/user.component.html
@@ -18,7 +18,7 @@
                    <div>
                    <div class="text-end">
                      <button type="button" class="btn btn-primary mb-2"  (click)="largeModal(largeDataModal)">
-                       <i class="mdi mdi-plus mr-1"></i> New User
+                       <i class="mdi mdi-plus me-1"></i> New User
                      </button>
                    </div>
                  </div>
@@ -55,7 +55,7 @@
                     <td  class="text-center">
                       <div placement="bottom-right">
                         <a href="javascript: void(0);"  (click)="editModal(largeDataModal,merchants)"><i
-                          class="bx bx-pencil text-success mr-2 font-size-20"></i>
+                          class="bx bx-pencil text-success me-2 font-size-20"></i>
                         </a>
                        
                         
@@ -76,7 +76,7 @@
       <div class="col-12">
         <div class="text-center my-3">
           <a href="javascript:void(0);" class="text-success">
-            <i class="bx bx-loader bx-spin font-size-18 align-middle mr-2"></i> Load more
+            <i class="bx bx-loader bx-spin font-size-18 align-middle me-2"></i> Load more
           </a>
         </div>
       </div>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="form-group mb-0 text-end">
                   <div>
-                    <button type="submit" class="btn btn-primary mr-1">
+                    <button type="submit" class="btn btn-primary me-1">
                       Submit
                     </button>
                     <button type="reset" class="btn btn-secondary">
