--- a/src/app/pages/tasks/overview/overview.component.html
+++ b/src/app/pages/tasks/overview/overview.component.html
@@ -50,9 +50,9 @@
     <div class="col-lg-4">
 
       <ul class="timeline">
-        <li class="timeline-item bg-white rounded ml-3 p-4 shadow" *ngFor="let h of history">
+        <li class="timeline-item bg-white rounded ms-3 p-4 shadow" *ngFor="let h of history">
           <div class="timeline-arrow"></div>
-          <h2 class="h5 mb-0">Task {{h.status_name}}</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>
+          <h2 class="h5 mb-0">Task {{h.status_name}}</h2><span class="small text-gray"><i class="fa fa-clock-o me-1"></i>
           {{h.created_at |date}}
           </span>
           <p class="text-small mt-2 font-weight-light">
