--- a/src/app/pages/ui/cards/cards.component.html
+++ b/src/app/pages/ui/cards/cards.component.html
@@ -257,7 +257,7 @@
     <div class="col-lg-4">
       <div class="card bg-primary text-white-50">
         <div class="card-body">
-          <h5 class="mt-0 mb-4 text-white"><i class="mdi mdi-bullseye-arrow mr-3"></i> Primary Card</h5>
+          <h5 class="mt-0 mb-4 text-white"><i class="mdi mdi-bullseye-arrow me-3"></i> Primary Card</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
         </div>
@@ -267,7 +267,7 @@
     <div class="col-lg-4">
       <div class="card bg-success text-white-50">
         <div class="card-body">
-          <h5 class="mt-0 mb-4 text-white"><i class="mdi mdi-check-all mr-3"></i> Success Card</h5>
+          <h5 class="mt-0 mb-4 text-white"><i class="mdi mdi-check-all me-3"></i> Success Card</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
         </div>
@@ -277,7 +277,7 @@
     <div class="col-lg-4">
       <div class="card bg-info text-white-50">
         <div class="card-body">
-          <h5 class="mt-0 mb-4 text-white"><i class="mdi mdi-alert-circle-outline mr-3"></i>Info Card</h5>
+          <h5 class="mt-0 mb-4 text-white"><i class="mdi mdi-alert-circle-outline me-3"></i>Info Card</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
         </div>
@@ -290,7 +290,7 @@
     <div class="col-lg-4">
       <div class="card bg-warning text-white-50">
         <div class="card-body">
-          <h5 class="mt-0 mb-4 text-white"><i class="mdi mdi-alert-outline mr-3"></i>Warning Card</h5>
+          <h5 class="mt-0 mb-4 text-white"><i class="mdi mdi-alert-outline me-3"></i>Warning Card</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
         </div>
@@ -300,7 +300,7 @@
     <div class="col-lg-4">
       <div class="card bg-danger text-white-50">
         <div class="card-body">
-          <h5 class="mt-0 mb-4 text-white"><i class="mdi mdi-block-helper mr-3"></i>Danger Card</h5>
+          <h5 class="mt-0 mb-4 text-white"><i class="mdi mdi-block-helper me-3"></i>Danger Card</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
         </div>
@@ -310,7 +310,7 @@
     <div class="col-lg-4">
       <div class="card bg-dark text-light">
         <div class="card-body">
-          <h5 class="mt-0 mb-4 text-light"><i class="mdi mdi-alert-circle-outline mr-3"></i>Dark Card</h5>
+          <h5 class="mt-0 mb-4 text-light"><i class="mdi mdi-alert-circle-outline me-3"></i>Dark Card</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
         </div>
@@ -323,7 +323,7 @@
     <div class="col-lg-4">
       <div class="card border border-primary">
         <div class="card-header bg-transparent border-primary">
-          <h5 class="my-0 text-primary"><i class="mdi mdi-bullseye-arrow mr-3"></i>Primary outline Card</h5>
+          <h5 class="my-0 text-primary"><i class="mdi mdi-bullseye-arrow me-3"></i>Primary outline Card</h5>
         </div>
         <div class="card-body">
           <h5 class="card-title mt-0">card title</h5>
@@ -336,7 +336,7 @@
     <div class="col-lg-4">
       <div class="card border border-danger">
         <div class="card-header bg-transparent border-danger">
-          <h5 class="my-0 text-danger"><i class="mdi mdi-block-helper mr-3"></i>Danger outline Card</h5>
+          <h5 class="my-0 text-danger"><i class="mdi mdi-block-helper me-3"></i>Danger outline Card</h5>
         </div>
         <div class="card-body">
           <h5 class="card-title mt-0">card title</h5>
@@ -349,7 +349,7 @@
     <div class="col-lg-4">
       <div class="card border border-success">
         <div class="card-header bg-transparent border-success">
-          <h5 class="my-0 text-success"><i class="mdi mdi-check-all mr-3"></i>Success Card</h5>
+          <h5 class="my-0 text-success"><i class="mdi mdi-check-all me-3"></i>Success Card</h5>
         </div>
         <div class="card-body">
           <h5 class="card-title mt-0">card title</h5>
