--- a/src/app/pages/utility/pricing/pricing.component.html
+++ b/src/app/pages/utility/pricing/pricing.component.html
@@ -38,16 +38,16 @@
 
           <div class="plan-features mt-5">
             <p>
-              <i class="bx bx-checkbox-square text-primary mr-2"></i> Free Live Support
+              <i class="bx bx-checkbox-square text-primary me-2"></i> Free Live Support
             </p>
             <p>
-              <i class="bx bx-checkbox-square text-primary mr-2"></i> Unlimited User
+              <i class="bx bx-checkbox-square text-primary me-2"></i> Unlimited User
             </p>
             <p>
-              <i class="bx bx-checkbox-square text-primary mr-2"></i> No Time Tracking
+              <i class="bx bx-checkbox-square text-primary me-2"></i> No Time Tracking
             </p>
             <p>
-              <i class="bx bx-checkbox-square text-primary mr-2"></i> Free Setup
+              <i class="bx bx-checkbox-square text-primary me-2"></i> Free Setup
             </p>
           </div>
         </div>
