--- a/src/app/pages/dashboards/default/default.component.html
+++ b/src/app/pages/dashboards/default/default.component.html
@@ -69,7 +69,7 @@
                         <div class="col-sm-6">
                             <p class="text-muted">This month</p>
                             <h3>$34,252</h3>
-                            <p class="text-muted"><span class="text-success mr-2"> 12% <i class="mdi mdi-arrow-up"></i>
+                            <p class="text-muted"><span class="text-success me-2"> 12% <i class="mdi mdi-arrow-up"></i>
                                 </span> From
                                 previous period</p>
 
@@ -202,7 +202,7 @@
                                 <i class="bx bx-right-arrow-circle font-size-18"></i>
                             </div>
                             <div class="media">
-                                <div class="mr-3">
+                                <div class="me-3">
                                     <h5 class="font-size-14">22 Nov <i
                                             class="bx bx-right-arrow-alt font-size-16 text-primary align-middle ms-2"></i>
                                     </h5>
@@ -219,7 +219,7 @@
                                 <i class="bx bx-right-arrow-circle font-size-18"></i>
                             </div>
                             <div class="media">
-                                <div class="mr-3">
+                                <div class="me-3">
                                     <h5 class="font-size-14">17 Nov <i
                                             class="bx bx-right-arrow-alt font-size-16 text-primary align-middle ms-2"></i>
                                     </h5>
@@ -237,7 +237,7 @@
                                 <i class="bx bxs-right-arrow-circle font-size-18 bx-fade-right"></i>
                             </div>
                             <div class="media">
-                                <div class="mr-3">
+                                <div class="me-3">
                                     <h5 class="font-size-14">15 Nov <i
                                             class="bx bx-right-arrow-alt font-size-16 text-primary align-middle ms-2"></i>
                                     </h5>
@@ -254,7 +254,7 @@
                                 <i class="bx bx-right-arrow-circle font-size-18"></i>
                             </div>
                             <div class="media">
-                                <div class="mr-3">
+                                <div class="me-3">
                                     <h5 class="font-size-14">12 Nov <i
                                             class="bx bx-right-arrow-alt font-size-16 text-primary align-middle ms-2"></i>
                                     </h5>
