--- a/src/app/pages/ecommerce/productdetail/productdetail.component.html
+++ b/src/app/pages/ecommerce/productdetail/productdetail.component.html
@@ -50,14 +50,14 @@
                   <div class="col-md-6">
                     <div *ngFor="let i of productDetail[0].feature">
                       <p class="text-muted"><i
-                          class="bx bx-caret-right font-size-16 align-middle text-primary mr-1"></i>
+                          class="bx bx-caret-right font-size-16 align-middle text-primary me-1"></i>
                         {{i}}</p>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div *ngFor="let i of productDetail[0].feature">
                       <p class="text-muted"><i
-                          class="bx bx-caret-right font-size-16 align-middle text-primary mr-1"></i>
+                          class="bx bx-caret-right font-size-16 align-middle text-primary me-1"></i>
                         {{i}}</p>
                     </div>
                   </div>
