--- a/src/app/pages/form/elements/elements.component.html
+++ b/src/app/pages/form/elements/elements.component.html
@@ -217,7 +217,7 @@
                     <div class="row">
                         <div class="col-xl-3 col-sm-6">
                             <div class="mt-4">
-                                <h5 class="font-size-14 mb-4"><i class="mdi mdi-arrow-right text-primary mr-1"></i> Form
+                                <h5 class="font-size-14 mb-4"><i class="mdi mdi-arrow-right text-primary me-1"></i> Form
                                     Checkboxes
                                 </h5>
                                 <div class="form-check mb-3">
@@ -236,7 +236,7 @@
                         </div>
                         <div class="col-xl-3 col-sm-6">
                             <div class="mt-4">
-                                <h5 class="font-size-14 mb-4"><i class="mdi mdi-arrow-right text-primary mr-1"></i> Form
+                                <h5 class="font-size-14 mb-4"><i class="mdi mdi-arrow-right text-primary me-1"></i> Form
                                     Checkboxes
                                     Right</h5>
                                 <div>
@@ -260,7 +260,7 @@
                         </div>
                         <div class="col-xl-3 col-sm-6">
                             <div class="mt-4">
-                                <h5 class="font-size-14"><i class="mdi mdi-arrow-right text-primary mr-1"></i> Form
+                                <h5 class="font-size-14"><i class="mdi mdi-arrow-right text-primary me-1"></i> Form
                                     Checkboxes
                                     colors</h5>
                                 <p class="sub-header mb-4">Add class <code>.form-check-* </code> for a color
@@ -308,7 +308,7 @@
                         </div>
                         <div class="col-xl-3 col-sm-6">
                             <div class="mt-4">
-                                <h5 class="font-size-14"><i class="mdi mdi-arrow-right text-primary mr-1"></i> Form
+                                <h5 class="font-size-14"><i class="mdi mdi-arrow-right text-primary me-1"></i> Form
                                     Checkboxes
                                     Outline</h5>
                                 <p class="sub-header mb-4">Add class <code>.form-checkbox-outline</code> &
@@ -418,7 +418,7 @@
                         <div class="col-xl-3 col-sm-6">
                             <div class="mt-4">
                                 <h5 class="font-size-14"><i
-                                        class="mdi mdi-arrow-right text-primary mr-1"></i> Form Radio
+                                        class="mdi mdi-arrow-right text-primary me-1"></i> Form Radio
                                     colors</h5>
                                 <p class="sub-header mb-4">Add class <code>.form-radio-* </code> for a
                                     color Radios</p>
@@ -468,7 +468,7 @@
                         <div class="col-xl-3 col-sm-6">
                             <div class="mt-4">
                                 <h5 class="font-size-14"><i
-                                        class="mdi mdi-arrow-right text-primary mr-1"></i> Form Radio
+                                        class="mdi mdi-arrow-right text-primary me-1"></i> Form Radio
                                     Outline</h5>
                                 <p class="sub-header mb-4">Add class <code>form-radio-outline</code> &
                                     <code>.form-radio-* </code> for a color Checkboxes</p>
