--- a/src/app/pages/projects/overview/overview.component.html
+++ b/src/app/pages/projects/overview/overview.component.html
@@ -130,7 +130,7 @@
             <div class="col-lg-12">
               <div class="text-end">
                 <button type="button" class="btn btn-primary mb-2"  routerLink="/tasks/create/{{id}}">
-                  <i class="mdi mdi-plus mr-1"></i> New Task
+                  <i class="mdi mdi-plus me-1"></i> New Task
                 </button>
               </div>
             </div>
