--- a/src/app/pages/projects/projectlist/projectlist.component.html
+++ b/src/app/pages/projects/projectlist/projectlist.component.html
@@ -5,7 +5,7 @@
     <div class="col-lg-12">
       <div class="text-end">
         <button type="button" class="btn btn-primary mb-2"  routerLink="/projects/create">
-          <i class="mdi mdi-plus mr-1"></i> New Project
+          <i class="mdi mdi-plus me-1"></i> New Project
         </button>
       </div>
     </div>
@@ -80,7 +80,7 @@
     <div class="col-12">
       <div class="text-center my-3">
         <a href="javascript:void(0);" class="text-success">
-          <i class="bx bx-loader bx-spin font-size-18 align-middle mr-2"></i> Load more
+          <i class="bx bx-loader bx-spin font-size-18 align-middle me-2"></i> Load more
         </a>
       </div>
     </div>
